# feature-store-task-feathr

./: .gitignore  Dockerfile.dev  README.md  docker-compose-minio.yaml  docker-compose.yaml  feathr_config.yaml  local_quickstart_notebook_adapted.ipynb  main.ipynb  pyproject.toml  start-hdfs.sh
.devcontainer/: devcontainer.json
backup-localquickstart-notebook/: local_quickstart_notebook.ipynb
feathr_data/: product_detail.csv  user_observation.csv  user_profile.csv  user_purchase_history.csv
hadoop_config/: core-site.xml  hdfs-site.xml
